# videos

./: manage.py  pyproject.toml
processing/: forms.py  models.py  views.py
processing/migrations/: 0001_initial.py
processing/templates/: upload_file.html
static/: package.json  rollup.config.js
static/src/bundles/uploadFile/: App.svelte
static/src/components/: csrf.svelte
videos/: settings.py  urls.py
