[tool.poetry]
name = "videos"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.1"
ffmpeg-python = "^0.2.0"

[tool.poetry.dev-dependencies]
yapf = "^0.32.0"
bandit = "^1.7.1"
xenon = "^0.8.0"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
